[package]
name = "cardinality-estimator"
version = "1.0.0"
edition = "2021"
authors = ["Alex Bocharov <bocharov.alexandr@gmail.com>"]
description = "A crate for estimating the cardinality of distinct elements in a stream or dataset."
documentation = "https://docs.rs/cardinality-estimator"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cloudflare/cardinality-estimator"
keywords = ["cardinality", "distinct-count", "hyperloglog", "probabilistic", "sketch"]
categories = ["algorithms", "data-structures"]

[dependencies]
serde = { version = "1.0.197", optional = true }
wyhash = "0.5.0"

[dev-dependencies]
test-case = "3.3.1"

[[bench]]
name = "cardinality_estimator"
harness = false

[features]
default = []
with_serde = ["serde"]

[profile.release]
debug = 1
